[package]
name = "relay"
version = "1.1.0"
edition = "2018"
authors = ["Broxus team"]
publish = false
license-file = "LICENSE"

[workspace]
members = [
    "client",
    "relay-eth",
    "relay-models",
    "relay-ton",
    "relay-utils",
]

[[bin]]
name = "config-generator"


[dependencies]
# Local dependencies
relay-eth = { path = "./relay-eth" }
relay-models = { path = "./relay-models" }
relay-ton = { path = "./relay-ton" }
relay-utils = { path = "./relay-utils" }

# General dependencies
anyhow = "1.0.33"
async-trait = "0.1"
backtrace = "0.3.55"
base64 = "*"
borsh = "0.9.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.0.0-beta.2", features = ["wrap_help"] }
config = { version = "*", features = ["yaml"] }
either = "1.6"
futures = "0.3.1"
hex = "0.4.2"
http = "0.2"
log = "*"
log4rs = "1.0.0"
num-bigint = "0.2.6"
num-traits = "0.2.14"
opg = { version = "0.0", features = ["chrono"] }
rand = "0.6"
semver = "1.0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.59"
serde_yaml = "0.8.14"
sha3 = "0.9.1"
sled = "0.34.5"
thiserror = "1.0.22"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.5"
toml = "0.5.7"
url = { version = "2.1.1", features = ["serde"] }
warp = { version = "0.3", default-features = false }

# ETH specific dependencies
ethabi = "14.0.0"
ed25519-dalek = "1.0.1"

# TON specific dependencies
ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
ton_abi = { git = "https://github.com/tonlabs/ton-labs-abi.git" }


# Crypto stuff
ring = "0.16.15"
secp256k1 = { version = "0.20.0", features = ["default", "rand", "recovery"] }
secstr = { version = "0.4.0", features = ["serde"] }
sodiumoxide = "0.2.6"
tiny-bip39 = "0.8.0"
tiny-hderive = "0.3.0"
tap = "1.0.1"

[dev-dependencies]
pretty_assertions = "0.7.2"

[features]
default = ["graphql-transport"]
tonlib-transport = ["relay-ton/tonlib-transport"]
graphql-transport = ["relay-ton/graphql-transport"]
paranoid = []
dockerized = []

[package.metadata.deb]
depends = "$auto"
section = "utility"
assets = [
    ["target/release/relay", "usr/bin/relay", "755"],
    ["target/release/client", "usr/bin/relay-client", "755"],
]
conf-files = ["/etc/relay.conf"]
maintainer-scripts = "debian/"
features = ["graphql-transport", "tonlib-transport"]

[package.metadata.deb.systemd-units]
unit-scripts = "debian/"
